--- a/client/app/views/HomeView.html
+++ b/client/app/views/HomeView.html
@@ -1,1 +1,22 @@
-<h1>SUP HOME VIEW</h1>
+<div class="container">
+  <section class="row mt-3">
+    <!-- STUB birdcard -->
+    <!-- <div class="col-md-3">
+      <div class="border border-dark rounded shadow">
+        <img class="bird-img"
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS5gnvtiF4xRH-ggQefOKbeSi7ZLot7PZC8nA&usqp=CAU"
+          alt="The boy wonder">
+
+        <div class="p-3 d-flex justify-content-between align-items-center">
+          <div>
+            <p class="fs-4 fw-bold">The Boy Wonder</p>
+            <p class="fs-4">👀 0</p>
+          </div>
+          <img class="creator-picture"
+            src="https://images.unsplash.com/photo-1544819576-82e8d26e7d22?q=80&w=2187&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="Happy G-PA">
+        </div>
+      </div>
+    </div> -->
+  </section>
+</div>
