storing birds in appstate, drawing html template

--- a/client/app/views/HomeView.html
+++ b/client/app/views/HomeView.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <section class="row mt-3">
+  <section id="birdCards" class="row mt-3">
     <!-- STUB birdcard -->
     <!-- <div class="col-md-3">
       <div class="border border-dark rounded shadow">
