--- a/client/app/views/HomeView.html
+++ b/client/app/views/HomeView.html
@@ -1,4 +1,40 @@
 <div class="container">
+  <section class="row">
+    <div class="col-8 m-auto">
+      <form onsubmit="app.BirdsController.createBird()">
+
+        <div class="form-floating mb-3">
+          <input type="text" required name="name" class="form-control" id="name" placeholder="Bird Name"
+            maxlength="100">
+          <label for="name">Bird Name</label>
+        </div>
+
+        <div class="form-floating mb-3">
+          <input type="url" required name="imgUrl" maxlength="500" class="form-control" id="imgUrl"
+            placeholder="Bird Image URL">
+          <label for="imgUrl">Bird Image URL</label>
+        </div>
+
+        <div class="form-floating mb-3">
+          <input type="text" required name="location" maxlength="500" class="form-control" id="location"
+            placeholder="Bird Location">
+          <label for="location">Bird Location</label>
+        </div>
+
+        <div class="form-floating mb-3">
+          <textarea class="form-control" name="description" placeholder="Leave a comment here" id="description"
+            maxlength="500"></textarea>
+          <label for="description">Description of Bird</label>
+        </div>
+
+        <div class="text-end">
+          <button class="btn btn-primary" type="submit">Submit</button>
+        </div>
+
+      </form>
+    </div>
+  </section>
+
   <section id="birdCards" class="row mt-3">
     <!-- STUB birdcard -->
     <!-- <div class="col-md-3">
