styled a lil bit 🤷

--- a/client/app/views/HomeView.html
+++ b/client/app/views/HomeView.html
@@ -1,6 +1,6 @@
 <div class="container">
-  <section class="row">
-    <div class="col-8 m-auto">
+  <section class="row my-4">
+    <div class="col-8 m-auto bird-form p-4 rounded border border-dark border-4">
       <form onsubmit="app.BirdsController.createBird()">
 
         <div class="form-floating mb-3">
