forced merge conflict

--- a/client/assets/style/style.css
+++ b/client/assets/style/style.css
@@ -77,3 +77,8 @@ footer {
   border-radius: 50%;
   object-fit: cover;
 }
+
+.bird-details-better-section{
+  background-attachment: fixed;
+  /* HAHA SUCKER ENJOY THE MERGE CONFLICT */
+}
