--- a/client/app/views/HomeView.html
+++ b/client/app/views/HomeView.html
@@ -58,17 +58,12 @@
 </div>
 
 
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary">
-  Launch demo modal
-</button>
-
 <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="birdNest" tabindex="-1" aria-labelledby="birdNestLabel" aria-hidden="true">
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Bird Details</h1>
+        <h1 class="modal-title fs-5" id="birdNestLabel">Bird Details</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body" id="activeBird">
